Fix syntax error in govet step of CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Run govet
         run: |
-          if [ -n "$(go vet ./...)"]; then;
+          if [ -n "$(go vet ./...)"]; then
             echo "Go code has vet errors, run 'go vet ./...'" >&2
             exit 1
           fi
