Remove routing package from CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [master]
 
 env:
-  PACKAGES: ./ ./layers ./tcpassembly ./reassembly ./pcapgo ./pcap ./routing
+  PACKAGES: ./ ./layers ./tcpassembly ./reassembly ./pcapgo ./pcap
 
 jobs:
   test:
